--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,13 +1,13 @@
 <nav class="navbar sticky-top navbar-expand-lg bg-dark mb-3" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand" href="#">RESPIRE</a>
+        <a class="navbar-brand" href="{{ url_for('routes.home') }}">RESPIRE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="{{ url_for('routes.home') }}">Home</a>
                 </li>
             </ul>
         </div>
