--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,6 +10,12 @@
                     <a class="nav-link" href="{{ url_for('home.homepage') }}">Home</a>
                 </li>
             </ul>
+            {% if current_user.is_authenticated %}
+            <form class="d-flex">
+                <span class="navbar-text me-3">Hello {{ current_user.name }}!</span>
+                <a class="btn btn-outline-warning me-3" href="{{ url_for('auth.logout') }}">Logout</a>
+            </form>
+            {% endif %}
         </div>
     </div>
 </nav>
