--- a/templates/pages/set_threshold.html
+++ b/templates/pages/set_threshold.html
@@ -4,13 +4,23 @@
 
 {% block content %}
     <h1>Editing {{ type }} threshold</h1>
-    <form class="form-control" method="post">
-        <label for="currentThreshold">Current threshold: </label>
-        <input type="number" value="{{ current_value }}" id="currentThreshold" disabled>
-        <br>
-        <label for="newThreshold">New threshold: </label>
-        <input type="number" id="newThreshold" min="0" max="{{ max_value }}" step="{{ step_value }}">
-        <br>
-        <input type="submit" value="Submit">
+    <form method="post">
+        <div class="mb-3 row">
+            <div class="col-auto">
+                <label class="col-form-label" for="currentThreshold">Current threshold: </label>
+            </div>
+            <div class="col-auto">
+                <input class="form-control" type="number" value="{{ current_value }}" id="currentThreshold" disabled>
+            </div>
+        </div>
+        <div class="mb-3 row">
+            <div class="col-auto">
+                <label class="col-form-label" for="newThreshold">New threshold: </label>
+            </div>
+            <div class="col-auto">
+                <input class="form-control" type="number" id="newThreshold" name="new-threshold" min="0" max="{{ max_value }}" step="{{ step_value }}">
+            </div>
+        </div>
+        <input class="btn btn-primary" type="submit" value="Submit">
     </form>
 {% endblock %}
